[package]
name = "swap_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = { version = "0.30.2", features = ["serde"] }
candid = "0.10.10"
ic-cdk = "0.17.0"
serde = { version = "1.0.215", features = ["derive"] }
ic-stable-structures = "0.6.6"
ic-ledger-types = "0.14.0"
icrc-ledger-types = "0.1.6"
sha2 = "0.10.8"
serde_bytes = "0.11.15"
ic-crypto-secp256k1 = { git = "https://github.com/dfinity/ic" }
ripemd = "0.1.3"
bs58 = "0.5.1"
tiny-keccak = { version = "2.0.2", features= ["sha3"] }
getrandom = { version = "0.2.15", features = ["custom"] }
ic-cdk-timers = "0.10.0"
ordinals = "0.0.10"
hex = "0.4.3"
ciborium = "0.2.2"
serde_with = "3.9.0"
ic-management-canister-types = { git = "https://github.com/dfinity/ic" }
num-integer = "0.1.46"
serde_json = "1.0.132"
