[package]
name = "swap_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

# ic 
candid = "0.10.10"
ic-cdk = "0.17.0"
ic-ledger-types = "0.14.0"
ic-stable-structures = "0.6.7"
icrc-ledger-types = "0.1.6"
ic-cdk-timers = "0.11.0"

# ic's git
ic-crypto-secp256k1 = { git = "https://github.com/dfinity/ic" }
ic-management-canister-types = { git = "https://github.com/dfinity/ic" }

# bitcoin
bitcoin = { version = "0.32.3", features = ["serde"] }

# ordinals
ordinals = "0.0.12"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
serde_bytes = "0.11.15"
serde_with = "3.11.0"

tiny-keccak = { version = "2.0.2", features = ["sha3"] }
getrandom = { version = "0.2.15", features = ["custom"] }
sha2 = "0.10.8"

ripemd = "0.1.3"
bs58 = "0.5.1"
hex = "0.4.3"

num-integer = "0.1.46"
